# AliyunBailianMCP

./: .gitignore  PUBLISH.md  PUBLISH_GUIDE.md  README.md  RELEASE_SUMMARY.md  TEST_RESULTS_SUMMARY.md  check_release_readiness.py  publish_all.py  pyproject.toml  requirements.txt
.trae/rules/: project_rules.md
mcp_server_bailian_image/: CHANGELOG.md  PUBLISH.md  README.md  publish.py  pyproject.toml  requirements.txt  run_tests.py
mcp_server_bailian_image/src/mcp_server_bailian_image/: __init__.py  server.py
mcp_server_bailian_image/test/: __init__.py  test_image_generation.py
mcp_server_bailian_video_synthesis/: CHANGELOG.md  PUBLISH.md  README.md  publish.py  pyproject.toml  requirements.txt  run_tests.py
mcp_server_bailian_video_synthesis/src/mcp_server_bailian_video_synthesis/: __init__.py  server.py
mcp_server_bailian_video_synthesis/test/: __init__.py  test_video_synthesis.py
src/: README.md  test_mcp_server.py
src/mcp_server_bailian_video_synthesis/: __init__.py  server.py
