[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-server-bailian-video-synthesis"
version = "1.0.1"
description = "阿里云百炼-通义万相视频编辑统一模型MCP服务器"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "John Chen", email = "john.chen@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Multimedia :: Video",
]
keywords = ["mcp", "model-context-protocol", "aliyun", "bailian", "video", "ai"]
license = "MIT"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.24.0",
    "asyncio",
]

[project.urls]
Homepage = "https://github.com/johnchen/mcp-server-bailian-video-synthesis"
Repository = "https://github.com/johnchen/mcp-server-bailian-video-synthesis"
Documentation = "https://github.com/johnchen/mcp-server-bailian-video-synthesis#readme"
"Bug Tracker" = "https://github.com/johnchen/mcp-server-bailian-video-synthesis/issues"

[project.scripts]
mcp-server-bailian-video-synthesis = "mcp_server_bailian_video_synthesis.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true